--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
     							if (dateStr === aujourdHuiStr) {
       								const [h, m] = heurePure.split(":").map((n) => parseInt(n, 10));
 
-      								if (h < currentHour || (h === currentHour && m <= currentMinute)) {
+      								if (h < currentHour || (h === currentHour && m < currentMinute)) {
         								// console.log(`⏩ Ignoré: ${heurePure} (passé)`);
         								return; // séance passée
       								}
@@ -405,6 +405,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
