--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 									}
 
     							} catch (e) {
-        							.error("URL invalide :", url);
+        							console.error("URL invalide :", url);
     							}
 
     							if (embedUrl) {
@@ -405,6 +405,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
