--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 					});
 				}
 
-				if (base === "DAJE") {
-    				base = "Deconseilleauxjeunesenfants";
+				if (base === "GDAJE") {
+    				base = "GDeconseilleauxjeunesenfants";
 				}
 
 				return base + "RGB.jpg";
@@ -449,6 +449,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
