--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 <link href="favicons/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png"/>
 <!-- Icône pour iOS / iPadOS -->
 <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-<!-- Pour Safari et autres navigateurs -->
-<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+<!-- Pour Safari et autres navigateurs 
+<link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32" type="image/png"> -->
+<link rel="icon" href="./favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
 <!-- Icônes Android / Chrome -->
@@ -448,6 +449,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
