--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <link href="favicons/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
 <link href="favicons/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png"/>
 <!-- Icône pour iOS / iPadOS -->
-<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="120x120" href="favicons/icon-120.png">
+<link rel="apple-touch-icon" sizes="180x180" href="favicons/icon-180.png">
 <!-- Pour Safari et autres navigateurs 
 <link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32" type="image/png"> -->
 <link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -449,6 +450,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
