--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <!-- Safari Pinned Tab (optionnel, nécessite un SVG) -->
 <link color="#5bbad5" href="favicons/safari-pinned-tab.svg" rel="mask-icon"/>
 
-<!-- Manifest PWA -->
-<link rel="manifest" href="favicons/site.webmanifest.json">
+<!-- Manifest PWA 
+<link rel="manifest" href="favicons/site.webmanifest.json"> -->
 <!-- Couleurs pour l'intégration mobile -->
 <meta content="#000000" name="theme-color"/>
 <meta content="#ffffff" name="background-color"/>
@@ -450,6 +450,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
