--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <link rel="apple-touch-icon" sizes="120x120" href="./apple-touch-icon-120x120.png">
 <link rel="apple-touch-icon" sizes="144x144" href="./apple-touch-icon-144x144.png">
 <link rel="apple-touch-icon" sizes="152x152" href="./apple-touch-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon-180x180.png">
+<link rel="apple-touch-icon" sizes="180x180" href="https://github.com/stephanemorinqcca-glitch/cinema-horaire/blob/main/apple-touch-icon-180x180.png">
 <!-- Pour Safari et autres navigateurs 
 <link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32" type="image/png"> -->
 <link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -457,6 +457,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
