--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <link href="favicons/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
 <link href="favicons/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png"/>
 <!-- Icône pour iOS / iPadOS -->
-<link rel="apple-touch-icon" sizes="57x57" href="./apple-touch-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="./apple-touch-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="./apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="./apple-touch-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="./apple-touch-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="./apple-touch-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="./apple-touch-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="./apple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="57x57" href="https://github.com/stephanemorinqcca-glitch/cinema-horaire/blob/main/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="https://github.com/stephanemorinqcca-glitch/cinema-horaire/blob/main/apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="https://github.com/stephanemorinqcca-glitch/cinema-horaire/blob/main/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="https://github.com/stephanemorinqcca-glitch/cinema-horaire/blob/main/apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="https://github.com/stephanemorinqcca-glitch/cinema-horaire/blob/main/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="https://github.com/stephanemorinqcca-glitch/cinema-horaire/blob/main/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="https://github.com/stephanemorinqcca-glitch/cinema-horaire/blob/main/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="https://github.com/stephanemorinqcca-glitch/cinema-horaire/blob/main/apple-touch-icon-152x152.png">
 <link rel="apple-touch-icon" sizes="180x180" href="https://github.com/stephanemorinqcca-glitch/cinema-horaire/blob/main/apple-touch-icon-180x180.png">
 <!-- Pour Safari et autres navigateurs 
 <link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32" type="image/png"> -->
@@ -457,6 +457,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
