--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon-180x180.png">
 <!-- Pour Safari et autres navigateurs 
 <link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32" type="image/png"> -->
-<link rel="icon" href="./favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+<link rel="icon" type="image/x-icon" href="./favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
 
 <!-- Favicon standard pour navigateurs -->
 <link href="favicons/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
@@ -458,6 +458,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
