--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <link rel="apple-touch-icon" sizes="72x72" href="favicons/apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="76x76" href="favicons/apple-touch-icon-76x76.png">
 <link rel="apple-touch-icon" sizes="114x114" href="favicons/apple-touch-icon-114x114.png"> -->
-<link rel="apple-touch-icon" href="./apple-touch-icon.png">
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 <!-- <link rel="apple-touch-icon" sizes="144x144" href="favicons/apple-touch-icon-144x144.png">
 <link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-touch-icon-152x152.png">
 <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon-180x180.png"> -->
 <!-- Pour Safari et autres navigateurs 
 <link rel="icon" href="favicons/favicon-32x32.png" sizes="32x32" type="image/png"> -->
-<link rel="icon" type="image/x-icon" href="./favicon.ico">
-<link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
 <!-- Favicon standard pour navigateurs -->
 <link href="favicons/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
@@ -458,6 +458,7 @@ document.getElementById("videoModal").addEventListener("click", (e) => {
 });
 </script></body>
 </html>
+
 
 
 
