--- a/index.html
+++ b/index.html
@@ -304,28 +304,22 @@
 						// Grouper les séances par date en filtrant directement
 						const tz = "America/Toronto";
 
-						// Date du jour à Toronto au format YYYY-MM-DD
-						const aujourdHuiStr = new Date().toLocaleDateString("fr-CA", { timeZone: tz });
-
-						// Heure actuelle à Toronto (heures et minutes séparées)
+						// Obtenir la date et l'heure actuelles à Toronto
 						const maintenant = new Date();
+						const options = { timeZone: tz, hour12: false };
 
-						const currentHour = parseInt(
-  							new Intl.DateTimeFormat("fr-CA", {
-    							timeZone: tz,
-    							hour: "2-digit",
-    							hour12: false
-  							}).format(maintenant),
-  							10
-						);
+						// Date du jour au format YYYY-MM-DD
+						const aujourdHuiStr = maintenant.toLocaleDateString("fr-CA", options);
 
-						const currentMinute = parseInt(
-  							new Intl.DateTimeFormat("fr-CA", {
-    							timeZone: tz,
-    							minute: "2-digit"
-  							}).format(maintenant),
-  							10
-						);
+						// Heure actuelle (HH:MM)
+						const [currentHour, currentMinute] = new Intl.DateTimeFormat("fr-CA", {
+  							...options,
+  							hour: "2-digit",
+  							minute: "2-digit"
+						})
+  							.format(maintenant)
+  							.split(":")
+  							.map(n => parseInt(n, 10));
 
 						// console.log(`Heure actuelle à Toronto: ${currentHour}:${currentMinute}`);
 
