--- a/index.html
+++ b/index.html
@@ -141,14 +141,26 @@
 			function getDateHeureToronto() {
   				const tz = "America/Toronto";
   				const maintenant = new Date();
+
   				const dateStr = maintenant.toLocaleDateString("fr-CA", { timeZone: tz });
+
   				const heureStr = maintenant.toLocaleTimeString("fr-CA", {
-    				timeZone: tz,
+	    			timeZone: tz,
     				hour: "2-digit",
     				minute: "2-digit",
     				hour12: false
   				});
-  				const [hour, minute] = heureStr.split(":").map(n => Number(n));
+
+  				// Vérification du format HH:MM
+  				const match = heureStr.match(/^(\d{2})[:h](\d{2})$/);
+  				if (!match) {
+	    			console.warn("Format d'heure inattendu :", heureStr);
+    				return { dateStr, hour: 0, minute: 0 };
+  				}
+
+  				const hour = parseInt(match[1], 10);
+  				const minute = parseInt(match[2], 10);
+
   				return { dateStr, hour, minute };
 			}
 
