--- a/index.html
+++ b/index.html
@@ -145,16 +145,16 @@
   				const dateStr = maintenant.toLocaleDateString("fr-CA", { timeZone: tz });
 
   				const heureStr = maintenant.toLocaleTimeString("fr-CA", {
-	    			timeZone: tz,
+    				timeZone: tz,
     				hour: "2-digit",
     				minute: "2-digit",
     				hour12: false
   				});
 
-  				// Vérification du format HH:MM
-  				const match = heureStr.match(/^(\d{2})[:h](\d{2})$/);
+  				// Match "HH:MM" ou "HH h MM"
+  				const match = heureStr.match(/^(\d{2})\s*(?:h|:)\s*(\d{2})$/);
   				if (!match) {
-	    			console.warn("Format d'heure inattendu :", heureStr);
+    				console.warn("⛔ Format d'heure inattendu :", heureStr);
     				return { dateStr, hour: 0, minute: 0 };
   				}
 
