--- a/index.html
+++ b/index.html
@@ -422,6 +422,16 @@
 
 						details.appendChild(seancesDiv);
 
+						const aujourdHui = new Date().toISOString().split("T")[0];
+						const openingDate = film.OpeningDate;
+
+						if (openingDate && openingDate > aujourdHui) {
+    						const badge = document.createElement("span");
+    						badge.className = "badge-soon";
+    						badge.textContent = "🎉 Bientôt à l’affiche";
+    						card.appendChild(badge);
+						}
+
 						card.appendChild(details);
 						container.appendChild(card);
 					});
