--- a/index.html
+++ b/index.html
@@ -192,16 +192,6 @@
 						const card = document.createElement("div");
 						card.className = "card";
 
-						const aujourdHui = new Date().toISOString().split("T")[0];
-						const openingDate = film.OpeningDate;
-
-						if (openingDate && openingDate > aujourdHui) {
-    						const badge = document.createElement("span");
-    						badge.className = "badge-soon";
-    						badge.textContent = "🎉 Bientôt à l’affiche";
-    						card.appendChild(badge);
-						}
-
 						const poster = document.createElement("div");
 						poster.className = "poster";
 
@@ -308,7 +298,17 @@
     						poster.appendChild(image);
     						details.appendChild(contentBlock);
 						}
+						// Badge “Bientôt à l’affiche”
+						const aujourdHui = new Date().toISOString().split("T")[0];
+						const openingDate = film.OpeningDate;
 
+						if (openingDate && openingDate > aujourdHui) {
+  							const badge = document.createElement("div");
+  							badge.className = "badge-soon";
+  							badge.textContent = "🎉 Bientôt à l’affiche";
+  							card.appendChild(badge);
+						}
+						
 						// Affichage de la description avec couleur
 						if (classificationDetails !== "") {
     						const classificationDetailsDiv = document.createElement("div");
