--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 						if (openingDate && openingDate > aujourdHui) {
   							const badge = document.createElement("div");
   							badge.className = "badge-soon";
-  							badge.textContent = "🎉 Bientôt à l’affiche";
+  							badge.textContent = "🎬 Bientôt à l’affiche";
   							card.appendChild(badge);
 						}
 						
