--- a/index.html
+++ b/index.html
@@ -294,8 +294,9 @@
     						image.src = `classification/${imageFilename}`;
     						image.alt = "Classification visuelle";
     						image.className = "classification-image";
-
+							
     						poster.appendChild(image);
+							
 							// Badge “Bientôt à l’affiche”
 							const aujourdHui = new Date().toISOString().split("T")[0];
 							const openingDate = film.OpeningDate;
@@ -304,7 +305,8 @@
   								const badge = document.createElement("div");
   								badge.className = "badge-soon";
   								badge.textContent = "🎬 Bientôt à l’affiche";
-  								card.appendChild(badge);
+  								badge.title = `Sortie prévue le ${openingDate}`;
+  								poster.appendChild(badge); // ← ici, dans le bloc poster
 							}
     						details.appendChild(contentBlock);
 						}
