--- a/index.html
+++ b/index.html
@@ -298,17 +298,17 @@
     						poster.appendChild(image);
 							
 							// Badge “Bientôt à l’affiche”
-							const aujourdHui = new Date().toISOString().split("T")[0];
-							const openingDate = film.OpeningDate;
+							// const aujourdHui = new Date().toISOString().split("T")[0];
+							// const openingDate = film.OpeningDate;
 
-							if (openingDate && openingDate > aujourdHui) {
-								poster.classList.add("poster-grayscale");
+							// if (openingDate && openingDate > aujourdHui) {
+								// poster.classList.add("poster-grayscale");
   								// const badge = document.createElement("div");
   								// badge.className = "badge-soon";
   								// badge.textContent = "🎬 Bientôt à l’affiche";
   								// badge.title = `Sortie prévue le ${openingDate}`;
   								// poster.appendChild(badge); // ← ici, dans le bloc poster
-							}
+							// }
     						details.appendChild(contentBlock);
 						}
 						
