--- a/index.html
+++ b/index.html
@@ -183,7 +183,9 @@
 					});
 
 					const container = document.getElementById("films");
-					const aujourdHui = new Date().toISOString().split("T")[0];
+					// 📅 Date du jour à Toronto au format YYYY-MM-DD
+					const aujourdHui = new Date().toLocaleDateString("fr-CA", { timeZone: "America/Toronto" });
+
 					let sectionBientotAjoutee = false;
 					
 					data.films.forEach((film) => {
