--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
   						// Si c'est le premier film à venir → on insère le titre de section
   						if (isFuture && !sectionBientotAjoutee) {
     						const titreSection = document.createElement("h2");
-    						titreSection.textContent = "🎬 BIENTÔT À L’AFFICHE";
+    						titreSection.textContent = "🎬 BIENTÔT À L’AFFICHE 🎬";
     						titreSection.className = "section-title";
     						container.appendChild(titreSection);
     						sectionBientotAjoutee = true;
