--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
 		</div>
 	</div>
 </div>
+<div class="bientot-affiche-banner">
+	<span class="side-bar"></span>
+    <span class="banner-text">Bientôt à l’affiche</span>
+    <span class="side-bar"></span>
+</div>
 </main>
 <script>
 			// ✅ Définition unique des mots-clés
