--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
     							bande.className = "jour-label bientot-affiche-banner";
     							bande.innerHTML = `
       								<span class="side-bar"></span>
-      								<span class="banner-text">🎬 Bientôt à l’affiche</span>
+      								<span class="banner-text">Bientôt à l’affiche</span>
       								<span class="side-bar"></span>
     							`;
     							seancesDiv.appendChild(bande);
