--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     						bande.innerHTML = `
       							<span class="banner-text">Bientôt à l’affiche</span>
     						`;
-    						seancesDiv.appendChild(bande);
+    						details.appendChild(bande);
   						}	
 
 						const seancesDiv = document.createElement("div");
