--- a/index.html
+++ b/index.html
@@ -172,8 +172,15 @@
 				.then((response) => response.json())
 				.then((data) => {
 					const legendContainer = document.getElementById("legende");
+					const defaultFontColor = "#666666";
+        			const defaultBackgroundColor = "#eeeeee";
 					data.legende.forEach((attr) => {
 						const wrapper = document.createElement("span");
+						wrapper.className = "textlegende"; // Applique ton style CSS
+
+						// Applique les couleurs personnalisées ou par défaut
+            			wrapper.style.color = attr.FontColor || defaultFontColor;
+            			wrapper.style.backgroundColor = attr.BackgroundColor || defaultBackgroundColor;
 
 						const badge = document.createElement("span");
 						badge.className = "badge";
