--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
 						// Applique les couleurs personnalisées ou par défaut
             			wrapper.style.color = attr.FontColor || defaultFontColor;
-            			wrapper.style.backgroundColor = attr.BackgroundColor || defaultBackgroundColor;
+            			// wrapper.style.backgroundColor = attr.BackgroundColor || defaultBackgroundColor;
 
 						const badge = document.createElement("span");
 						badge.className = "badge";
