--- a/index.html
+++ b/index.html
@@ -96,26 +96,33 @@
     			if (!film || typeof film !== "object") {
         			console.warn("Film invalide:", film);
         			return "";
-    			}
+    			}	
 
-    			// Sécuriser motsCles même s'il est null ou non passé
     			const motsInterdits = Array.isArray(motsCles) ? motsCles : [];
+    			const contenu = typeof film.content === "string" ? film.content.trim() : "";
 
-    			const contenu = typeof film.content === "string" ? film.content : "";
-
-    			let contentArray = contenu
-        			.split("\n")
-        			.map((champ) => champ.trim())
-        			.filter((champ) => champ !== "" && !motsInterdits.includes(champ));
+    			let contentArray = [];
 
     			const duree = Number(film.duree);
     			if (!isNaN(duree)) {
         			const heures = Math.floor(duree / 60);
         			const minutes = duree % 60;
-        			contentArray.unshift(`Durée ${heures}h${minutes.toString().padStart(2, "0")}`);
+        			const dureeStr = `Durée ${heures}h${minutes.toString().padStart(2, "0")}`;
+        			contentArray.push(dureeStr);
     			}
 
-    			return contentArray.join(" | ");
+    			// Si le contenu est vide, on retourne uniquement la durée
+    			if (contenu === "") {
+        			return ` | ${contentArray.join(" | ")}`;
+	    		}
+
+    			// Sinon, on nettoie le contenu
+    			const contenuNettoye = contenu
+        			.split("\n")
+        			.map((champ) => champ.trim())
+        			.filter((champ) => champ !== "" && !motsInterdits.includes(champ));
+
+    			return ` | ${[...contenuNettoye, ...contentArray].join(" | ")}`;
 			}
 
 			// ✅ Génération du nom de fichier image
