--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
     			// Si le contenu est vide, on retourne uniquement la durée
     			if (contenu === "") {
+					console.log(`Contenu vide pour le film "${film.titre}"`);
         			return ` | ${contentArray.join(" | ")}`;
 	    		}
 
@@ -120,7 +121,7 @@
     			const contenuNettoye = contenu
         			.split("\n")
         			.map((champ) => champ.trim())
-        			.filter((champ) => champ !== "" && !motsInterdits.includes(champ));
+					.filter((champ) => typeof champ === "string" && champ !== "" && !motsInterdits.includes(champ));
 
     			return ` | ${[...contenuNettoye, ...contentArray].join(" | ")}`;
 			}
